# BPTpackage

./: BPTexample.m  BPTmodel.m  BPTplots.m  README.md  corner_plume.m  line_plume.m  melt_calc.m  point_plume.m  pyproject.toml
src/BPTmodel/: melt.py  model.py  plots.py  plume.py
tests/: BPTexample.py  BPTexample_interactive.py
