[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BPTmodel"
version = "0.1.0"
authors = [
    {name = "dcwheeler", email = "10646362+dcwheeler@users.noreply.github.com"},
]
description = "Buoyant plume theory in the context of marine-terminating glaciers."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload",
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "gsw>=3.6.0",
    "xarray>=2023.6.0",
]
license = {text = "MIT"}

[project.optional-dependencies]
plots = ["matplotlib>=3.9.0", "pyqt5"]

[project.urls]
Homepage = "https://github.com/PolarCoasts/BPTModel"
[tool.pdm]
distribution = true
